--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
-<html>  
-  <head>   
-  </head>  
-  <body>  
-    <h1 id="welcome"> What is your name? </h1>  
-  </body>
-  
-  <script type = "text/javascript">
-    var nickname = prompt("Please enter your name: ");
-    if (nickname != null) {
-      document.getElementById("welcome").innerText =
-      "Hello, " + nickname + "!";
-    }
-  </script> 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+</head>
+<body>
+  <label> Enter your name:</label><br>
+  <input type="text" id="myText"></br>
+  <button type= "button" id="myButton"></button>
+ <script> scr= "script.js"</script>
+</body>
 </html>
