--- a/index.html
+++ b/index.html
@@ -7,9 +7,7 @@
   <title>Document</title>
 </head>
 <body>
-  <label> Enter your name:</label><br>
-  <input type="text" id="myText"></br>
-  <button type= "button" id="myButton"></button>
- <script> scr= "script.js"</script>
+  <script src="script.js" </script>
+ 
 </body>
 </html>
